2005-11-17  Dick Porter  <dick@ximian.com>

	* Environment.cs: Incremented corlib version

2005-11-14  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* Int32.cs, UInt32.cs, Int16.cs, UInt16.cs, Int64.cs,
	UInt64.cs, Byte.cs, SByte.cs, Double.cs : Modify internal Parse
	methods to return the exception as an out parameter,
	instead of throwing it. This will be of special help
	to TryParse methods.
	* Environment.cs: Update corlib version to 42.
	
2005-11-14  Raja R Harinath  <rharinath@novell.com>

	* EventHandler.cs (EventHandler<TEventArgs>): Rename from EventHandler<T>.

2005-11-11  Zoltan Varga  <vargaz@gmail.com>

	* Type.cs (GetPseudoCustomAttributes): Return ComImportAttribute as well.

2005-11-11  Lluis Sanchez Gual  <lluis@novell.com>

	* TimeZone.cs: Removed incorrect double-check lock and unneeded
	hashtable access.

2005-11-11  Marek Safar  <marek.safar@seznam.cz>

	* Type.cs: IsNested implemented, signature fixes.

2005-11-11  Raja R Harinath  <rharinath@novell.com>

	* Array.cs (Resize<T>) [2-argument variant]: Fix nullref.

2005-11-10  Zoltan Varga  <vargaz@gmail.com>

	* Array.cs (Resize<T>): New internal method which takes a 'length' argument
	as well to avoid copying the whole array.

2005-11-09  Atsushi Enomoto  <atsushi@ximian.com>

	* Int64.cs : ditto for long.

2005-11-09  Atsushi Enomoto  <atsushi@ximian.com>

	* Int32.cs : Parse("2147483648", format_provider) should be rejected.

2005-11-09  Sebastien Pouliot  <sebastien@ximian.com>

	* AttributeTargets.cs: Added [ComVisible (true)] and [Serializable] 
	in 2.0 profile.
	* Base64FormattingOptions.cs: Added missing [Flags] attribute.
	* ConsoleKey.cs: Removed old BackSpace and WhiteSpace (they were 
	already replaced by Backspace and Whitespace)
	* DateTime.cs: Moved DayOfWeek enum to it's own file.
	* DateTimeKind.cs: New (2.0) enum.
	* DayOfWeek.cs: New file (extracted from DateTime.cs).
	* DomainManagerInitializationFlags.cs: Removed extra [Serializable].