@@ -1,3 +1,7 @@
+2005-11-25  Alp Toker  <alp@atoker.com>
+
+	* Type.cs (IsVisible): New 2.0 property, implemented recursively.
+
 2005-11-17  Dick Porter  <dick@ximian.com>
 
 	* Environment.cs: Incremented corlib version
